@@ -378,7 +378,7 @@ public class Gutter extends JComponent implements SwingConstants
 	/**
 	 * Sets whether the gutter is collapsed or expanded and force the text
 	 * area to update its layout if there is a change.
-	 * @param collapsed true if the gutter is expanded,
+	 * @param expanded true if the gutter is expanded,
 	 *                   false if it is collapsed
 	 */
 	public void setExpanded(boolean expanded)
